[gd_scene load_steps=19 format=3 uid="uid://rg10ottkatgt"]

[ext_resource type="Script" uid="uid://bk4dm4xnyqogw" path="res://client/scenario/PE/menu/contact_list.gd" id="1_0uixb"]
[ext_resource type="Theme" uid="uid://vspng5affrpu" path="res://client/theme/default.tres" id="1_owahp"]
[ext_resource type="Script" uid="uid://clypjd6rx1e6k" path="res://client/scenario/PE/menu/add_button.gd" id="3_foriy"]
[ext_resource type="Script" uid="uid://7ynjbtrijku1" path="res://client/scenario/PE/menu/chat_control.gd" id="3_u2v2u"]
[ext_resource type="Script" uid="uid://dxhr4k6ltpeyu" path="res://client/scenario/PE/menu/message_scroll_container.gd" id="4_yrdwg"]
[ext_resource type="Script" uid="uid://do2yy7p7p53hi" path="res://client/scenario/PE/menu/input_control.gd" id="5_0n5uo"]
[ext_resource type="Texture2D" uid="uid://dtg426mbw1v2w" path="res://client/UI/send.png" id="5_6mfq6"]
[ext_resource type="Script" uid="uid://mc7u0fsgm1hb" path="res://client/scenario/PE/menu/input_h_box_container.gd" id="5_fi28v"]
[ext_resource type="Texture2D" uid="uid://bxw2r25xmx1wp" path="res://client/theme/sticker.png" id="6_3ml8e"]
[ext_resource type="Texture2D" uid="uid://bax8bc17pmhi2" path="res://client/UI/add.png" id="6_ckadc"]
[ext_resource type="Texture2D" uid="uid://dyvasvbf3v78j" path="res://client/UI/back.png" id="6_voyc5"]
[ext_resource type="Script" uid="uid://bunj5kd3w5oy3" path="res://client/scenario/PE/menu/add_window.gd" id="6_vrtdb"]
[ext_resource type="Texture2D" uid="uid://c3glvnv146w5x" path="res://client/theme/imageButton.png" id="7_qn5ek"]
[ext_resource type="Script" uid="uid://cd5xy77vw5pt7" path="res://client/scenario/PE/menu/disconnect_accept_dialog.gd" id="8_vuflk"]
[ext_resource type="Script" uid="uid://bc77ckji4wjj8" path="res://client/scenario/PE/menu/image_control.gd" id="9_ayfel"]
[ext_resource type="Script" uid="uid://bwew83t1uaudm" path="res://client/scenario/PE/menu/sticker_grid_container.gd" id="10_6ivbi"]
[ext_resource type="Script" uid="uid://q0txqpfte1c4" path="res://client/scenario/PE/menu/sticker_control.gd" id="10_qfry1"]
[ext_resource type="Script" uid="uid://dfjllh5t41twm" path="res://client/scenario/PE/menu/copy_public_key_button.gd" id="11_oejtg"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_owahp")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ChatControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_u2v2u")
metadata/_edit_lock_ = true

[node name="ScrollBottomTimer" type="Timer" parent="ChatControl"]
wait_time = 0.2
one_shot = true

[node name="AvatatTextureRect" type="TextureRect" parent="ChatControl"]
layout_mode = 0
anchor_right = 0.126667
anchor_bottom = 0.0584975
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="nameLabel" type="Label" parent="ChatControl"]
layout_mode = 0
anchor_left = 0.154667
anchor_top = 0.00738916
anchor_right = 0.944
anchor_bottom = 0.0554187
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="MessageScrollContainer" type="ScrollContainer" parent="ChatControl"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1133
anchor_right = 1.0
anchor_bottom = 0.91564
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_yrdwg")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="MessageVBoxContainer" type="VBoxContainer" parent="ChatControl/MessageScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="InputControl" type="Control" parent="ChatControl"]
layout_mode = 1
anchor_left = 0.0653333
anchor_top = 0.506158
anchor_right = 0.949333
anchor_bottom = 0.99569
mouse_filter = 2
script = ExtResource("5_0n5uo")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="InputVBoxContainer" type="VBoxContainer" parent="ChatControl/InputControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 2
metadata/_edit_lock_ = true

[node name="InputHBoxContainer" type="HBoxContainer" parent="ChatControl/InputControl/InputVBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
mouse_filter = 2
script = ExtResource("5_fi28v")

[node name="TextEdit" type="TextEdit" parent="ChatControl/InputControl/InputVBoxContainer/InputHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 22
placeholder_text = "please_enter_your_message"
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="SendButton" type="TextureButton" parent="ChatControl/InputControl/InputVBoxContainer/InputHBoxContainer"]
custom_minimum_size = Vector2(108.14, 0)
layout_mode = 2
texture_normal = ExtResource("5_6mfq6")
ignore_texture_size = true
stretch_mode = 5
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="ChatControl/InputControl/InputVBoxContainer/InputHBoxContainer"]
wait_time = 0.1
one_shot = true

[node name="OptionHBoxContainer2" type="HBoxContainer" parent="ChatControl/InputControl/InputVBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
mouse_filter = 2

[node name="StickerButton" type="TextureButton" parent="ChatControl/InputControl/InputVBoxContainer/OptionHBoxContainer2"]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
texture_normal = ExtResource("6_3ml8e")
ignore_texture_size = true
stretch_mode = 5

[node name="ImageButton" type="TextureButton" parent="ChatControl/InputControl/InputVBoxContainer/OptionHBoxContainer2"]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
texture_normal = ExtResource("7_qn5ek")
ignore_texture_size = true
stretch_mode = 5

[node name="ImageControl" type="Control" parent="ChatControl/InputControl/InputVBoxContainer" groups=["InputControl"]]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
mouse_filter = 1
script = ExtResource("9_ayfel")

[node name="ImageTextureRect" type="TextureRect" parent="ChatControl/InputControl/InputVBoxContainer/ImageControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0196375
anchor_top = 0.176
anchor_right = 0.783988
anchor_bottom = 0.878
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="SendImageTextureButton" type="TextureButton" parent="ChatControl/InputControl/InputVBoxContainer/ImageControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.803922
anchor_top = 0.732
anchor_right = 0.945701
anchor_bottom = 0.92
offset_right = -6.10352e-05
texture_normal = ExtResource("5_6mfq6")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="CloseTimer" type="Timer" parent="ChatControl/InputControl/InputVBoxContainer/ImageControl"]
wait_time = 0.1
one_shot = true

[node name="StickerControl" type="Control" parent="ChatControl/InputControl/InputVBoxContainer" groups=["InputControl"]]
visible = false
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
mouse_filter = 1
script = ExtResource("10_qfry1")

[node name="StickerScrollContainer" type="ScrollContainer" parent="ChatControl/InputControl/InputVBoxContainer/StickerControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.070997
anchor_top = 0.09
anchor_right = 0.957704
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="StickerGridContainer" type="GridContainer" parent="ChatControl/InputControl/InputVBoxContainer/StickerControl/StickerScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3
script = ExtResource("10_6ivbi")

[node name="CloseTimer" type="Timer" parent="ChatControl/InputControl/InputVBoxContainer/StickerControl"]
wait_time = 0.1
one_shot = true

[node name="Control" type="Control" parent="ChatControl/InputControl/InputVBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 600)
layout_mode = 2

[node name="BackButton" type="TextureButton" parent="ChatControl"]
layout_mode = 0
offset_right = 88.0
offset_bottom = 88.0
texture_normal = ExtResource("6_voyc5")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="ContactListControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="ContactList" type="VBoxContainer" parent="ContactListControl"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0923645
anchor_right = 1.0
anchor_bottom = 0.934729
offset_top = 146.305
offset_bottom = 146.305
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0uixb")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="AddButton" type="TextureButton" parent="ContactListControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.846667
anchor_top = 0.00184729
anchor_right = 0.994667
anchor_bottom = 0.0658867
offset_right = 6.10352e-05
texture_normal = ExtResource("6_ckadc")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="AddWindow" type="Window" parent="ContactListControl"]
title = "add_friend"
initial_position = 1
size = Vector2i(400, 300)
visible = false
script = ExtResource("6_vrtdb")

[node name="Control" type="Control" parent="ContactListControl/AddWindow"]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 300.0

[node name="TextEdit" type="TextEdit" parent="ContactListControl/AddWindow/Control"]
layout_mode = 0
offset_left = 170.68
offset_top = 32.675
offset_right = 370.68
offset_bottom = 182.675
theme_override_font_sizes/font_size = 28

[node name="Label" type="Label" parent="ContactListControl/AddWindow/Control"]
layout_mode = 0
offset_left = 11.75
offset_top = 98.215
offset_right = 91.75
offset_bottom = 121.215
theme_override_font_sizes/font_size = 28
text = "请输入公钥"

[node name="AddButton" type="Button" parent="ContactListControl/AddWindow/Control"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 0
offset_left = 169.315
offset_top = 222.36
offset_right = 239.315
offset_bottom = 253.36
theme_override_font_sizes/font_size = 28
text = "OK"
script = ExtResource("3_foriy")

[node name="CopyPublicKeyButton" type="Button" parent="ContactListControl"]
layout_mode = 0
anchor_left = 0.608
anchor_top = 0.00492611
anchor_right = 0.832
anchor_bottom = 0.0652709
theme_override_font_sizes/font_size = 28
text = "复制我的公钥"
script = ExtResource("11_oejtg")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="DisconnectAcceptDialog" type="AcceptDialog" parent="."]
title = "disconnect"
initial_position = 1
size = Vector2i(400, 300)
script = ExtResource("8_vuflk")

[connection signal="timeout" from="ChatControl/ScrollBottomTimer" to="ChatControl" method="_on_scroll_bottom_timer_timeout"]
[connection signal="text_changed" from="ChatControl/InputControl/InputVBoxContainer/InputHBoxContainer/TextEdit" to="ChatControl/InputControl" method="_on_text_edit_text_changed"]
[connection signal="pressed" from="ChatControl/InputControl/InputVBoxContainer/InputHBoxContainer/SendButton" to="ChatControl/InputControl" method="_on_send_button_pressed"]
[connection signal="timeout" from="ChatControl/InputControl/InputVBoxContainer/InputHBoxContainer/Timer" to="ChatControl/InputControl/InputVBoxContainer/InputHBoxContainer" method="_on_timer_timeout"]
[connection signal="pressed" from="ChatControl/InputControl/InputVBoxContainer/OptionHBoxContainer2/StickerButton" to="ChatControl/InputControl/InputVBoxContainer/StickerControl" method="_on_sticker_button_pressed"]
[connection signal="pressed" from="ChatControl/InputControl/InputVBoxContainer/OptionHBoxContainer2/ImageButton" to="ChatControl/InputControl/InputVBoxContainer/ImageControl" method="_on_image_button_pressed"]
[connection signal="mouse_entered" from="ChatControl/InputControl/InputVBoxContainer/ImageControl" to="ChatControl/InputControl/InputVBoxContainer/ImageControl" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ChatControl/InputControl/InputVBoxContainer/ImageControl" to="ChatControl/InputControl/InputVBoxContainer/ImageControl" method="_on_mouse_exited"]
[connection signal="pressed" from="ChatControl/InputControl/InputVBoxContainer/ImageControl/SendImageTextureButton" to="ChatControl/InputControl/InputVBoxContainer/ImageControl" method="_on_send_image_texture_button_pressed"]
[connection signal="timeout" from="ChatControl/InputControl/InputVBoxContainer/ImageControl/CloseTimer" to="ChatControl/InputControl/InputVBoxContainer/ImageControl" method="_on_close_timer_timeout"]
[connection signal="mouse_entered" from="ChatControl/InputControl/InputVBoxContainer/StickerControl" to="ChatControl/InputControl/InputVBoxContainer/StickerControl" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ChatControl/InputControl/InputVBoxContainer/StickerControl" to="ChatControl/InputControl/InputVBoxContainer/StickerControl" method="_on_mouse_exited"]
[connection signal="timeout" from="ChatControl/InputControl/InputVBoxContainer/StickerControl/CloseTimer" to="ChatControl/InputControl/InputVBoxContainer/StickerControl" method="_on_close_timer_timeout"]
[connection signal="pressed" from="ChatControl/BackButton" to="ChatControl" method="_on_back_button_pressed"]
[connection signal="pressed" from="ContactListControl/AddButton" to="ContactListControl/AddWindow" method="_on_add_button_pressed"]
[connection signal="close_requested" from="ContactListControl/AddWindow" to="ContactListControl/AddWindow" method="_on_close_requested"]
[connection signal="pressed" from="ContactListControl/AddWindow/Control/AddButton" to="ContactListControl/AddWindow/Control/AddButton" method="_on_pressed"]
[connection signal="pressed" from="ContactListControl/CopyPublicKeyButton" to="ContactListControl/CopyPublicKeyButton" method="_on_pressed"]
[connection signal="canceled" from="DisconnectAcceptDialog" to="DisconnectAcceptDialog" method="_on_canceled"]
